Bug 511812 - With HDR enabled, cursor does not automatically transition through night light colors
Summary: With HDR enabled, cursor does not automatically transition through night ligh...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-08 09:02 UTC by ctj9512
Modified: 2025-11-22 00:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ctj9512 2025-11-08 09:02:00 UTC
SUMMARY

With HDR enabled, cursor does not automatically transition through night light colors

STEPS TO REPRODUCE

1. Use HDR
2. Enable/disable night light, but keep cursor unchanged

OBSERVED RESULT

As screen fades in/out of night light colors, the cursor remains the old color until the cursor changes.

EXPECTED RESULT

The cursor color should follow the rest of the screen

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.12.55-1-lts (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7735HS with Radeon Graphics
Memory: 96 GiB of RAM (93.5 GiB usable)
Graphics Processor 1: AMD Radeon RX 7700S
Graphics Processor 2: AMD Radeon 680M

ADDITIONAL INFORMATION

Similar to https://bugs.kde.org/show_bug.cgi?id=504890 but is from night light, instead of lock screen.
Comment 1 Bug Janitor Service 2025-11-17 20:57:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8447
Comment 2 Zamundaaa 2025-11-18 16:36:09 UTC
Git commit 2548d299b1ddb8701dfa4af3aa266cd59f573f44 by Xaver Hugl.
Committed on 18/11/2025 at 15:53.
Pushed by zamundaaa into branch 'master'.

backends/drm: add missing layer repaints for night light changes

M  +4    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/2548d299b1ddb8701dfa4af3aa266cd59f573f44
Comment 3 Zamundaaa 2025-11-18 17:38:24 UTC
Git commit 025af282739667fa86d27ef6e61f647b86715b82 by Xaver Hugl.
Committed on 18/11/2025 at 16:39.
Pushed by zamundaaa into branch 'Plasma/6.5'.

backends/drm: add missing layer repaints for night light changes


(cherry picked from commit 2548d299b1ddb8701dfa4af3aa266cd59f573f44)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +4    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/025af282739667fa86d27ef6e61f647b86715b82