backends/drm: add missing layer repaints for night light changes

BUG: 511812